--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,3 +31,11 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: build & Push Doker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: shashanktandon6342/abc
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
