--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: shashanktandon6342/xyz
-        registry: docker.io
+        registry: registry-url.io
+        dockerfile: Dockerfile.ci
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
